--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
   }
 body {
-  background: #070506 url('img/main-bg.png');
+  background: #070506 url('img/main-bg2.png') top right 90% no-repeat;
   background-size: cover;
   background-attachment: fixed;
   color: #fff;
