--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
     box-sizing: border-box;
   }
 body {
-  background: #070506 url('img/main-bg2.png') top right 90% no-repeat;
-  background-size: cover;
+  background: #010101 url('img/main-bg.jpg') top right -150% no-repeat;
+  background-size: contain;
   background-attachment: fixed;
   color: #fff;
   font-family: "Roboto", sans-serif;
@@ -169,4 +169,69 @@ body {
   background:rgba(64, 101, 255, 0.86);
 }
 
+.slider__rating-label {
+  margin-right: 10px;
+}
 
+.star {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url('img/star.svg') no-repeat;
+}
+
+.star-o {
+  background: url('img/star-o.svg') no-repeat;
+}
+
+.slider__nav--left {
+  width: 32px;
+  height: 32px;
+  border: none;
+  margin-right: 15px;
+  background: transparent url('img/Arrow_left.svg') no-repeat;
+  cursor: pointer;
+  outline: none;
+}
+
+.slider__nav--right {
+  width: 32px;
+  height: 32px;
+  border: none;
+  background: transparent url('img/Arrow_right.svg') no-repeat;
+  cursor: pointer;
+  outline: none;
+}
+
+.slider__nav--left span, 
+.slider__nav--right span {
+  display: none;
+}
+
+
+@media (max-width: 600px) {
+  .herp__subtitle {
+    font-size: 24px;
+  }
+  .hero__title {
+    font-size: 26px;
+    line-height: 120%;
+  }
+  .fero__description {
+    font-size: 16px;
+  }
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .header__logo {
+    margin-bottom: 30px;
+  }
+  .nav {
+    display: flex;
+    flex-direction: column;
+  }
+  .nav__link {
+    margin-bottom: 10px;
+  }
+}
